k8s/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-api
  namespace: todo-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: node-api
  template:
    metadata:
      labels:
        app: node-api
    spec:
      imagePullSecrets:
        - name: acr-secret
      containers:
      - name: node-api
        image: k8sdemoproject.azurecr.io/node-api:14
        ports:
        - containerPort: 5000
