k8s/mssql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mssql
  namespace: todo-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mssql
  template:
    metadata:
      labels:
        app: mssql
    spec:
      containers:
      - name: mssql
        image: mcr.microsoft.com/mssql/server:2022-latest
        ports:
        - containerPort: 1433
        volumeMounts:
        - name: mssql-storage
          mountPath: /var/opt/mssql
      volumes:
      - name: mssql-storage
        emptyDir: {}
      - name: setup-script
        configMap:
          name: mssql-setup-script-cm
