k8s/ui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-ui
  namespace: todo-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: react-ui
  template:
    metadata:
      labels:
        app: react-ui
    spec:
      imagepullsecrets:
      - name: acr-secret
      containers:
      - name: react-ui
        image: k8sdemoproject.azurecr.io/react-ui:13
        ports:
        - containerPort: 80
