k8s/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-api
  namespace: todo-app
spec:
  selector:
    app: node-api
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
  type: ClustorIP
