k8s/mssql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mssql-service
  namespace: todo-app
spec:
  selector:
    app: mssql
  ports:
    - port: 1433
      targetPort: 1433
  clusterIP: None
